# VMPlacement

./: .clang-format  CMakeLists.txt  FORMAT.md  README.md  a.out  host_d.txt  host_data_converter.py  host_e.txt  host_f.txt  host_g.txt  isolver.hpp  request_data_converter.py  run.hpp  structures.cpp  structures.hpp
DataAnalysis/: main.cpp
baseline_solver/: baseline_solver.cpp  baseline_solver.hpp  main.cpp
best_fit/: main.cpp  solver.cpp  solver.hpp
best_fit_decreasing/: main.cpp  solver.cpp  solver.hpp
data/: host_a.txt  host_b.txt  host_c.txt  host_e.txt  host_h.txt
data_analysis/: CMakeLists.txt  main.cpp
first_fit/: main.cpp  solver.cpp  solver.hpp
first_fit_decreasing/: main.cpp  solver.cpp  solver.hpp
generic/: CMakeLists.txt
generic/include/: isolver.hpp  run.hpp  structures.hpp
generic/src/: structures.cpp
harmonic_solver/: harmonic_solver.cpp  harmonic_solver.hpp  main.cpp
max_fit/: main.cpp  solver.cpp  solver.hpp
modified_solver/: main.cpp  modified_solver.cpp  modified_solver.hpp
scripts/: host_data_converter.py  request_data_converter.py
solvers/: CMakeLists.txt
solvers/baseline/: CMakeLists.txt  README.md  main.cpp
solvers/baseline/include/: baseline.hpp
solvers/baseline/src/: baseline.cpp
solvers/best_fit/: CMakeLists.txt  README.md  best_fit.cpp  best_fit.hpp  main.cpp
solvers/best_fit_decreasing/: CMakeLists.txt  README.md  best_fit_decreasing.cpp  best_fit_decreasing.hpp  main.cpp
solvers/first_fit/: CMakeLists.txt  README.md  first_fit.cpp  first_fit.hpp  main.cpp
solvers/first_fit_decreasing/: CMakeLists.txt  README.md  first_fit_decreasing.cpp  first_fit_decreasing.hpp  main.cpp
solvers/harmonic/: CMakeLists.txt  README.md  harmonic.cpp  harmonic.hpp  main.cpp
solvers/max_fit/: CMakeLists.txt  README.md  main.cpp  max_fit.cpp  max_fit.hpp
solvers/modified/: CMakeLists.txt  main.cpp  modified.cpp  modified.hpp
solvers/segmented/: CMakeLists.txt  README.md  main.cpp  segmented.cpp  segmented.hpp
